# quant-factor-lab

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: backtest.yaml  ticker_renames.yaml
docker/: reproduce.sh
docs/: execution_timing.md  factors.md  monitoring.md  portfolio.md  regime_adaptive.md  risk.md
reports/factor_eval/: summary.md
reports/momentum_12_1/: metrics.md
reports/monitor/: summary.md
reports/portfolio_comparison/: summary.md
reports/regime_adaptive/: summary.md
reports/risk_attribution/: summary.md
scripts/: download_backtest_data.py  run_factor_evaluation.py  run_factor_monitoring.py  run_momentum_backtest.py  run_portfolio_comparison.py  run_regime_adaptive_backtest.py  run_risk_attribution.py
src/quantlab/: __init__.py
src/quantlab/backtest/: __init__.py  costs.py  engine.py  metrics.py
src/quantlab/data/: __init__.py  aliases.py  prices.py  universe.py
src/quantlab/factors/: __init__.py  base.py  evaluation.py  liquidity.py  low_volatility.py  momentum.py  preprocess.py  reversal.py
src/quantlab/monitor/: __init__.py  decay.py  regime.py
src/quantlab/portfolio/: __init__.py  optimizer.py  regime_adaptive.py  risk_parity.py  turnover_control.py
src/quantlab/reports/: __init__.py  factor_report.py  monitor_report.py  risk_report.py  tearsheet.py
src/quantlab/risk/: __init__.py  attribution.py  covariance.py  factor_risk.py
tests/: __init__.py  test_aliases.py  test_backtest.py  test_evaluation.py  test_factors.py  test_metrics.py  test_monitor.py  test_portfolio.py  test_price_factors.py  test_prices.py  test_regime_adaptive.py  test_risk.py  test_universe.py
