[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-factor-lab"
version = "0.1.0"
description = "Industrial-grade quantitative research platform: data -> factors -> backtest -> risk -> portfolio -> monitor -> reports."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ryan Qiu", email = "ryanqiuuuu@gmail.com" }]
keywords = ["quant", "factor", "backtest", "portfolio", "risk", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "matplotlib",
    "yfinance",
    "pyarrow>=19.0.1",  # 19.0.0 has a Parquet read regression ("Repetition level histogram size mismatch")
    "pydantic",
    "requests",
    "beautifulsoup4",
    "pyyaml",
]

[project.urls]
Repository = "https://github.com/qiuuuu999/quant-factor-lab"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=quantlab --cov-report=term-missing"

[tool.coverage.run]
source = ["quantlab"]
branch = true

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "B"]
